--- a/TOneV2/Code/TOneV2/TOne.BI.Entities/TOne.BI.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BI.Entities/TOne.BI.Entities.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeDimensionType.cs" />
     <Compile Include="TimeDimensionValueRecord.cs" />
+    <Compile Include="TimeValuesRecord.cs" />
     <Compile Include="ZoneValue.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
