--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -177,6 +177,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="ModelMappers\Mappers.cs" />
+    <Compile Include="Models\BIMeasureTypeModel.cs" />
     <Compile Include="Models\RouteRuleModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -428,10 +429,14 @@
     <Content Include="Client\Libraries\JQuery\jquery-2.1.3.min.js" />
     <Content Include="Client\Modules\BI\Controllers\Dashboards\SeniorManagementDashboardController.js" />
     <Content Include="Client\Modules\BI\Controllers\Dashboards\TopManagementDashboardController.js" />
+    <Content Include="Client\Modules\BI\Controllers\Dashboards\ZoneDashboardController.js" />
     <Content Include="Client\Modules\BI\Controllers\Reports\ZoneDetailsController.js" />
+    <Content Include="Client\Modules\BI\Controllers\Reports\ZoneSummaryController.js" />
     <Content Include="Client\Modules\BI\Views\Dashboards\SeniorManagementDashboard.html" />
     <Content Include="Client\Modules\BI\Views\Dashboards\TopManagementDashboard.html" />
+    <Content Include="Client\Modules\BI\Views\Dashboards\ZoneDashboard.html" />
     <Content Include="Client\Modules\BI\Views\Reports\ZoneDetails.html" />
+    <Content Include="Client\Modules\BI\Views\Reports\ZoneSummary.html" />
     <Content Include="Client\Styles\custom.css" />
     <Content Include="Client\Styles\jquery-ui.css" />
     <Content Include="Client\Libraries\JQuery\jquery-ui.js" />
