--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -223,6 +223,7 @@
     <Content Include="Client\Javascripts\Services\dropdown-dir-service.js" />
     <Content Include="Client\Javascripts\Services\main-service.js" />
     <Content Include="Client\Javascripts\Services\textbox-dir-service.js" />
+    <Content Include="Client\Javascripts\Services\utilities-service.js" />
     <Content Include="Client\Javascripts\Services\validation-dir-service.js" />
     <Content Include="Client\Javascripts\Services\zone-service.js" />
     <Content Include="Client\Libraries\Angular\angular-animate.js" />
@@ -253,28 +254,17 @@
     <Content Include="Client\Libraries\Bootstrap\bootstrap.css.map" />
     <Content Include="Client\Libraries\Bootstrap\bootstrap.js" />
     <Content Include="Client\Libraries\Charts\HichChart\adapters\standalone-framework.js" />
-    <Content Include="Client\Libraries\Charts\HichChart\adapters\standalone-framework.src.js" />
     <Content Include="Client\Libraries\Charts\HichChart\highcharts-more.js" />
     <Content Include="Client\Libraries\Charts\HichChart\modules\broken-axis.js" />
-    <Content Include="Client\Libraries\Charts\HichChart\modules\broken-axis.src.js" />
     <Content Include="Client\Libraries\Charts\HichChart\modules\canvas-tools.js" />
-    <Content Include="Client\Libraries\Charts\HichChart\modules\canvas-tools.src.js" />
     <Content Include="Client\Libraries\Charts\HichChart\modules\data.js" />
-    <Content Include="Client\Libraries\Charts\HichChart\modules\data.src.js" />
     <Content Include="Client\Libraries\Charts\HichChart\modules\drilldown.js" />
-    <Content Include="Client\Libraries\Charts\HichChart\modules\drilldown.src.js" />
     <Content Include="Client\Libraries\Charts\HichChart\modules\exporting.js" />
-    <Content Include="Client\Libraries\Charts\HichChart\modules\exporting.src.js" />
     <Content Include="Client\Libraries\Charts\HichChart\modules\funnel.js" />
-    <Content Include="Client\Libraries\Charts\HichChart\modules\funnel.src.js" />
     <Content Include="Client\Libraries\Charts\HichChart\modules\heatmap.js" />
-    <Content Include="Client\Libraries\Charts\HichChart\modules\heatmap.src.js" />
     <Content Include="Client\Libraries\Charts\HichChart\modules\no-data-to-display.js" />
-    <Content Include="Client\Libraries\Charts\HichChart\modules\no-data-to-display.src.js" />
     <Content Include="Client\Libraries\Charts\HichChart\modules\solid-gauge.js" />
-    <Content Include="Client\Libraries\Charts\HichChart\modules\solid-gauge.src.js" />
     <Content Include="Client\Libraries\Charts\HichChart\modules\treemap.js" />
-    <Content Include="Client\Libraries\Charts\HichChart\modules\treemap.src.js" />
     <Content Include="Client\Libraries\Charts\HichChart\Plugins\grouped-categories.js" />
     <Content Include="Client\Libraries\Charts\HichChart\themes\dark-blue.js" />
     <Content Include="Client\Libraries\Charts\HichChart\themes\dark-green.js" />
@@ -433,6 +423,7 @@
     <Content Include="Client\Modules\BI\Controllers\Dashboards\ZoneDashboardController.js" />
     <Content Include="Client\Modules\BI\Controllers\Reports\ZoneDetailsController.js" />
     <Content Include="Client\Modules\BI\Controllers\Reports\ZoneSummaryController.js" />
+    <Content Include="Client\Modules\BI\Services\bi-utilities-service.js" />
     <Content Include="Client\Modules\BI\Views\Dashboards\SeniorManagementDashboard.html" />
     <Content Include="Client\Modules\BI\Views\Dashboards\TopManagementDashboard.html" />
     <Content Include="Client\Modules\BI\Views\Dashboards\ZoneDashboard.html" />
