--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -418,6 +418,9 @@
     <Content Include="Client\Libraries\Charts\ZingChart\zingchart.min.js" />
     <Content Include="Client\Libraries\Helpers\DateFormat.js" />
     <Content Include="Client\Libraries\JQuery\jquery-2.1.3.min.js" />
+    <Content Include="Client\Modules\BI\Constants\BIEntityTypeEnum.js" />
+    <Content Include="Client\Modules\BI\Constants\BIMeasureTypeEnum.js" />
+    <Content Include="Client\Modules\BI\Constants\BITimeDimensionTypeEnum.js" />
     <Content Include="Client\Modules\BI\Controllers\Dashboards\SeniorManagementDashboardController.js" />
     <Content Include="Client\Modules\BI\Controllers\Dashboards\TopManagementDashboardController.js" />
     <Content Include="Client\Modules\BI\Controllers\Dashboards\ZoneDashboardController.js" />
