git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22030

--- a/FZero/Vanrise.Fzero.Bypass.FTP/web.config
+++ b/FZero/Vanrise.Fzero.Bypass.FTP/web.config
@@ -5,6 +5,26 @@
   -->
 <configuration>
   <appSettings>
+    <add key="RequestAdditionalTime" value="60000" />
+    <!--10 minutes timeout for startup-->
+    <add key="TimerInterval" value="600000" />
+    <!--60 minutes-->
+
+    <add key="SERVER" value="10.10.10.53" />
+    <add key="DATABASE" value="CDRAnalysisMobile" />
+    <add key="UID" value="vanrise" />
+    <add key="PASSWORD" value="v@nrise" />
+    <add key="ToAddress" value="vanrisefms@gmail.com" />
+    <add key="host" value="smtp.gmail.com" />
+    <add key="port" value="587" />
+    <add key="FromMail" value="manualcalls@gmail.com" />
+    <add key="FromMailPassword" value="Vanrise123456" />
+    <add key="EnableSsl" value="true" />
+    <add key="XmlPath" value="D:\\mysql_xmls\\" />
+
+
+
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
   <system.web>
