--- a/FZero/Vanrise.Fzero.MobileCDRAnalysis.Services.Mysql/App.config
+++ b/FZero/Vanrise.Fzero.MobileCDRAnalysis.Services.Mysql/App.config
@@ -4,7 +4,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <appSettings>
-    <add key="RequestAdditionalTime" value="60000" />
+    <add key="RequestAdditionalTime" value="360000" />
     <!--10 minutes timeout for startup-->
     <add key="TimerInterval" value="3600000" />
     <!--60 minutes-->
@@ -13,13 +13,12 @@
     <add key="DATABASE" value="CDRAnalysisMobile" />
     <add key="UID" value="vanrise" />
     <add key="PASSWORD" value="v@nrise" />
-    <add key="ToAddress" value="vanrisefms@gmail.com" />
-    <add key="host" value="smtp.gmail.com" />
-    <add key="port" value="587" />
-    <add key="FromMail" value="manualcalls@gmail.com" />
-    <add key="FromMailPassword" value="Vanrise123456" />
-    <add key="EnableSsl" value="true" />
-    <add key="XmlPath" value="D:\\mysql_xmls\\" />
+    
+    
+    <add key="FTP_Username" value="root" />
+    <add key="FTP_Pasword" value="P@ssw0rd" />
+    
+    <add key="FTP_Path" value="/var/mysql/5.1/data"/>
 
 
 
