--- a/CLITester/CallGeneratorLibrary/app.config
+++ b/CLITester/CallGeneratorLibrary/app.config
@@ -25,7 +25,7 @@
   </appSettings>
     <connectionStrings>
         <add name="CallGeneratorLibrary.Properties.Settings.FraudTest2ConnectionString"
-            connectionString="Data Source=.;User ID=sa;Password=vanrise@cce$$;Initial Catalog=FraudTest2;"
+            connectionString="Data Source=LENOVO\SQL2008R2;Initial Catalog=FraudTest;Persist Security Info=True;User ID=sa;Password=lenovo"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
