--- a/TOneV2/Code/TOneV2/TOne.Analytics.Data/TOne.Analytics.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Data/TOne.Analytics.Data.csproj
@@ -49,6 +49,7 @@
     <Compile Include="AnalyticsDataManagerFactory.cs" />
     <Compile Include="IDataManager.cs" />
     <Compile Include="IAnalyticsDataManager.cs" />
+    <Compile Include="ITrafficStatisticDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
