--- a/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueueName.cs" />
     <Compile Include="SwitchInfo.cs" />
+    <Compile Include="TempTableName.cs" />
     <Compile Include="TOneQueue.cs" />
   </ItemGroup>
   <ItemGroup>
