build Route and UI
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22172

--- a/TOneV2/Code/TOneV2/TOne.LCR.Business/TOne.LCR.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Business/TOne.LCR.Business.csproj
@@ -55,6 +55,7 @@
     <Compile Include="RouteRuleMatchFinder.cs" />
     <Compile Include="RouteRules\RouteActions\ApplyPercentageRouteAction.cs" />
     <Compile Include="RouteRules\RouteActions\BlockRouteAction.cs" />
+    <Compile Include="RouteRules\RouteActions\BlockSuppliersRouteAction.cs" />
     <Compile Include="RouteRules\RouteActions\BuildLCRRouteAction.cs" />
     <Compile Include="RouteRules\RouteActions\CheckNoOptionsRouteAction.cs" />
     <Compile Include="RouteRules\RouteActions\GetTopOptionsRouteAction.cs" />
