Charts and ZoneMonitor
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22188

--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -522,6 +522,7 @@
     <Content Include="Client\Styles\ui-grid.css" />
     <Content Include="Client\Styles\ui-grid.svg" />
     <Content Include="Client\Styles\waves.css" />
+    <Content Include="Client\Templates\Directives\vr-chart-settings.html" />
     <Content Include="Client\Templates\Directives\vr-chart.html" />
     <Content Include="Client\Templates\Directives\vr-dropdown-menu.html" />
     <Content Include="Client\Templates\Directives\vr-dropdown-multiple.html" />
