git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22206

--- a/FZero/Vanrise.Fzero.MobileCDRAnalysis.Services.Mysql/App.config
+++ b/FZero/Vanrise.Fzero.MobileCDRAnalysis.Services.Mysql/App.config
@@ -9,16 +9,16 @@
     <add key="TimerInterval" value="3600000" />
     <!--60 minutes-->
 
-    <add key="SERVER" value="10.50.25.172" />
-    <add key="DATABASE" value="Zain" />
+    <add key="SERVER" value="192.168.110.241" />
+    <add key="DATABASE" value="CDRAnalysisMobile" />
     <add key="UID" value="vanrise" />
     <add key="PASSWORD" value="v@nrise" />
     
     
-    <add key="FTP_Username" value="mysql" />
-    <add key="FTP_Pasword" value="mysql_123" />
+    <add key="FTP_Username" value="root" />
+    <add key="FTP_Pasword" value="P@ssw0rd" />
     
-    <add key="FTP_Path" value="/MySQL/data"/>
+    <add key="FTP_Path" value="/var/mysql/5.5/data"/>
 
 
 
