--- a/FZero/Vanrise.Fzero.MobileCDRAnalysis.Services.Mysql/App.config
+++ b/FZero/Vanrise.Fzero.MobileCDRAnalysis.Services.Mysql/App.config
@@ -11,8 +11,8 @@
 
     <add key="SERVER" value="192.168.110.241" />
     <add key="DATABASE" value="CDRAnalysisMobile" />
-    <add key="UID" value="vanrise" />
-    <add key="PASSWORD" value="v@nrise" />
+    <add key="UID" value="zain" />
+    <add key="PASSWORD" value="zain123" />
     
     
     <add key="FTP_Username" value="root" />
