--- a/FZero/Vanrise.Fzero.MobileCDRAnalysis.Website/Web.config
+++ b/FZero/Vanrise.Fzero.MobileCDRAnalysis.Website/Web.config
@@ -24,8 +24,8 @@
     <pages theme="skins" />
   </system.web>
   <connectionStrings>
-    <add name="CDRAnalysisConnectionString" connectionString="Data Source=192.168.110.241;Initial Catalog=CDRAnalysisMobile;User ID=vanrise;Password=v@nrise;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.110.241;user id=vanrise;password=v@nrise;persistsecurityinfo=True;database=CDRAnalysisMobile&quot;" providerName="System.Data.EntityClient" />
+    <add name="CDRAnalysisConnectionString" connectionString="Data Source=192.168.110.241;Initial Catalog=CDRAnalysisMobile;User ID=zain;Password=zain123;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
@@ -34,6 +34,21 @@
     <add key="UploadPath" value="C:\\FMS_Import\\Manual\\"/>
     <add key="AutomaticUploadPath" value="C:\\FMS_Import\\Automatic\\"/>
     <add key="SQLType" value="MySQL"/>
+
+    <add key="SERVER" value="192.168.110.241" />
+    <add key="DATABASE" value="CDRAnalysisMobile" />
+    <add key="UID" value="zain" />
+    <add key="PASSWORD" value="zain123" />
+
+
+    <add key="FTP_Username" value="root" />
+    <add key="FTP_Pasword" value="P@ssw0rd" />
+
+    <add key="FTP_Path" value="/var/mysql/5.5/data"/>
+    
+    
+    
+    
   </appSettings>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
