git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22267

--- a/FZero/Vanrise.Fzero.MobileCDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.csproj
+++ b/FZero/Vanrise.Fzero.MobileCDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.csproj
@@ -256,6 +256,9 @@
     <Compile Include="vwReportedNumberNormalCDR.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwReportVariable.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="vwSuspectionAnalysi.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
