started adding Role and web config projects
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C22274

--- a/TOneV2/Code/TOneV2/TOne.Data/TOne.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Data/TOne.Data.csproj
@@ -105,6 +105,7 @@
     <Compile Include="DataManagerFactory.cs" />
     <Compile Include="IBusinessEntityDataManager.cs" />
     <Compile Include="IDataManager.cs" />
+    <Compile Include="ISecurityDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
