--- a/TOneV2/Code/TOneV2/TOne.Business/TOne.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Business/TOne.Business.csproj
@@ -117,6 +117,7 @@
   <ItemGroup>
     <Compile Include="BulkManager.cs" />
     <Compile Include="BusinessEntityManager.cs" />
+    <Compile Include="GenericEntityManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProtCodeMap.cs" />
     <Compile Include="ProtPricingGenerator.cs" />
