--- a/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
@@ -103,20 +103,26 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AsyncActivityStatus.cs" />
-    <Compile Include="AuthenticationOutput.cs" />
     <Compile Include="CacheObjectType.cs" />
+    <Compile Include="GenericEntity.cs" />
+    <Compile Include="GenericEntityStatus.cs" />
+    <Compile Include="Security\AuthenticationOutput.cs" />
     <Compile Include="CodeList.cs" />
     <Compile Include="CodeNode.cs" />
     <Compile Include="CodeTree.cs" />
-    <Compile Include="ConfigParameterName.cs" />
+    <Compile Include="Configuration\ConfigParameterName.cs" />
     <Compile Include="IBulkTableService.cs" />
     <Compile Include="MultipleSelection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueueName.cs" />
+    <Compile Include="Security\RolePermission.cs" />
+    <Compile Include="Security\Role.cs" />
+    <Compile Include="Security\RoleMember.cs" />
     <Compile Include="SwitchInfo.cs" />
     <Compile Include="TempTableName.cs" />
     <Compile Include="TOneQueue.cs" />
+    <Compile Include="Security\User.cs" />
+    <Compile Include="Security\UserRoleMember.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
@@ -134,6 +140,9 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Caching\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
